Converted tests to JUnit 4, fixed warnings, Java 1.5 compatibility.
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/configuration/trunk@1225013 13f79535-47bb-0310-9956-ffa450edef68